# service

./: .dockerignore  .gitignore  Dockerfile  celery_worker.py  docker-compose.yml  fly.toml  pyproject.toml  readme.md  test.ipynb
.github/workflows/: fly_deployment.yaml
app/: __init__.py  __version__.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: question_cluster_routes.py  semesters.py  tasks.py  units.py  users.py
app/const/: __init__.py
app/core/: auth.py  config.py
app/crud/: __init__.py  base.py  crud_semester.py  crud_unit.py  crud_user.py
app/db/: session.py
app/interfaces/: vector_store_interface.py
app/models/: __init__.py  base.py  clusters_result.py  question_cluster.py  semester_schedule.py  storing_threads_record.py  task_transaction.py  unit_dashboard.py  user.py
app/repositories/: question_cluster_repository.py  task_transaction_repository.py
app/schemas/: __init__.py  base_schema.py  crewai_faq_service_schema.py  semester_schedule.py  unit.py  user.py  vector_store.py
app/schemas/tasks/: base_task_result_schema.py  cluster_schema.py  requets.py  storing_task_schema.py  task_status.py
app/services/: crewai_service.py  ed_forum_service.py  pinecone_service.py  pinecone_vector_store.py
app/tasks/: __init__.py  agents_tasks.py  fetch_insert_to_vector_db_tasks.py  thread_clustering_tasks.py
app/utils/: cluster_utils.py  shared.py
